<resources>
    <string name="app_name">MakeNotes</string>
    <string name="menu">menu</string>
    <string name="admob">ca-app-pub-4348214297157669/6706933921</string>
    <string name="settings">Preferences</string>
    <string name="about">About</string>
    <string name="exit_message">Press again to exit</string>
    <string name="new_category">New category</string>
    <string name="empty">empty</string>
    <string name="no_categories">No categories found!</string>
    <string name="no_notes">No notes found!</string>
    <string name="no_categories_desc">Create a new category to start\ntaking notes</string>
    <string name="no_notes_desc">Start taking notes by creating\na new one</string>
    <string name="no_notes_hint">No notes</string>
    <string name="one_note">1 note</string>
    <string name="counter_note">%1$d notes</string>
    <string name="title">Title</string>
    <string name="choose_a_color">Choose a color:</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="theme">theme</string>
    <string name="edit_category">Edit category</string>
    <string name="edit">Edit</string>
    <string name="undo">Undo</string>
    <string name="back">back</string>
    <string name="new_note">New note</string>
    <string name="tool">tool</string>
    <string name="start_drawing">Start drawing</string>
    <string name="permission">Permission</string>
    <string name="storage_permission">EasyNotes needs to access your external storage to store data.</string>
    <string name="request">Request</string>
    <string name="permission_error">Permission not granted</string>
    <string name="permission_error_desc">EasyNotes might work incorrectly without permission to access the external storage.</string>
    <string name="continue_anyway">Continue anyway</string>
    <string name="permission_granted">Permission granted</string>
    <string name="backup">Backup data</string>
    <string name="restore">Restore data</string>
    <string name="new_folder">New folder</string>
    <string name="choose">Choose</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="required">This field is required</string>
    <string name="icon">icon</string>
    <string name="no_mounted_sd">No SD-Card was found</string>
    <string name="backup_saved">Backup data were saved at %1$s</string>
    <string name="backup_error">Backup error</string>
    <string name="data_restored">Back data were successfully restored.</string>
    <string name="restore_error">Restore error</string>
    <string name="not_implemented">This section has not been implemented for the beta version.</string>
    <string name="about_desc">Contact: www.Tashfik.me</string>
</resources>
