<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="@dimen/toolbar_height"
        android:layout_width="match_parent"
        android:background="?attr/colorPrimary"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:layout_gravity="start|top"
            app:srcCompat="@drawable/ic_back"
            android:clickable="true"
            android:background="@drawable/ripple_circle"
            android:scaleType="center"
            tools:ignore="MissingPrefix"
            android:contentDescription="@string/back"/>

        <ImageView
            android:id="@+id/delete_btn"
            android:layout_width="@dimen/toolbar_height"
            android:layout_height="@dimen/toolbar_height"
            android:layout_gravity="end|top"
            app:srcCompat="@drawable/ic_delete"
            android:clickable="true"
            android:visibility="gone"
            android:background="@drawable/ripple_circle"
            android:scaleType="center"
            tools:ignore="MissingPrefix"
            android:contentDescription="@string/menu"/>
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="456dp"
        android:layout_weight="1" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admob"></com.google.android.gms.ads.AdView>

</LinearLayout>