<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="16dp">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"
        tools:ignore="UselessLeaf" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hint_text"
            android:textSize="@dimen/medium_text"
            android:textColor="@color/main_text"
            android:hint="@string/title"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/start_drawing"/>

        <ImageView
            android:id="@+id/pen_tool"
            android:layout_width="@dimen/tool_size"
            android:layout_height="@dimen/tool_size"
            android:scaleType="center"
            android:clickable="true"
            android:background="@drawable/tool"
            app:srcCompat="@drawable/ic_pen"
            android:contentDescription="@string/tool"/>

        <ImageView
            android:id="@+id/eraser_tool"
            android:layout_width="@dimen/tool_size"
            android:layout_height="@dimen/tool_size"
            android:scaleType="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:clickable="true"
            android:background="@drawable/tool"
            app:srcCompat="@drawable/ic_eraser"
            android:contentDescription="@string/tool"/>

    </LinearLayout>

    <com.tasfiqul.ghani.CanvasView
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>